--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node src/server.ts",
     "test": "jest",
-    "build": "tsc",
+    "build": "tsc --build",
     "dev": "nodemon --exec ts-node src/server.ts",
     "serve": "node dist/src/server.js"
   },
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
     "express": "^4.19.2",
     "jest": "^29.7.0",
     "morgan": "^1.10.0",
