--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "simply-appointments-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "/dist/index.js",
   "scripts": {
     "start": "node dist/server.js",
     "test": "jest",
-    "prebuild":"mkdir -p dist/@types && cp -R node_modules/@types/. dist/@types/",
+    "prebuild": "mkdir -p dist/@types && cp -R node_modules/@types/. dist/@types/",
     "build": "tsc --build",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "serve": "node dist/server.js"
+    "serve": "node dist/server.js",
+    "debug": "node --inspect dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
