--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@jest-mock/express": "^2.1.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
@@ -35,6 +36,7 @@
     "aws-sdk": "^2.1598.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
