--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/passport": "^1.0.16",
     "@types/supertest": "^6.0.2",
     "express": "^4.19.2",
     "jest": "^29.7.0",
@@ -49,6 +50,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.5",
     "typeorm": "^0.3.20"
   }
