--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@xata.io/client": "^0.0.0-next.v64f10283eb9a098c575590d3ea17600e350321c9",
     "aws-sdk": "^2.1598.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
