--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "aws-sdk": "^2.1598.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
