--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,7 +1,7 @@
 name: Simply Appointments CI
 on:
   push:
-    branches: [main]
+    branches: [develop]
   pull_request:
     branches: [main]
 jobs:
