implement auth module

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,7 +1,7 @@
 name: Simply Appointments CI
 on:
   push:
-    branches: [develop]
+    branches: [develop, main, feature/*]
   pull_request:
     branches: [main]
 jobs:
