--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -15,4 +15,4 @@ jobs:
           node-version: '20.x'
       - run: npm install
       - run: npm run build --if-present
-      - run: npm test
+      - run: npm test --passWithNoTests
